--- a/Life-Expectancy-Data-Analysis-HTML.html
+++ b/Life-Expectancy-Data-Analysis-HTML.html
@@ -11,9 +11,7 @@
 
 <meta name="author" content="Adrian Żyła" />
 
-<meta name="date" content="2022-11-27" />
-
-<title>Projekt z analizy danych</title>
+<title>Analiza średniej długości lat życia na świecie</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
